<resources>
    <string name="app_name" translatable="false">Go4Lunch</string>

    <!-- Authentication Activity -->
    <string name="AA_go4lunch" translatable="false">Go4Lunch</string>
    <string name="AA_find_a_nice_restaurant">Find a nice restaurant and invite your co-workers for lunch !</string>
    <string name="AA_sign_in_with_facebook">Sign in with Facebook</string>
    <string name="AA_sign_in_with_google">Sign in with Google</string>
    <string name="AA_facebook_authentication_cancelled">Facebook authentication cancelled</string>
    <string name="AA_facebook_authentication_failed">Facebook authentication failed</string>
    <string name="AA_facebook_login_disabled">Facebook login disabled</string>
    <string name="AA_authentication_failed">Authentication failed</string>
    <string name="AA_content_description_logo_go4lunch">Logo Go4Lunch</string>
    <string name="AA_content_description_background">Photo of a restaurant table</string>
    <string name="AA_content_description_logo_facebook">Logo Facebook</string>
    <string name="AA_content_description_logo_google">Logo Google</string>

    <!-- Main Activity -->
    <string name="MA_go4lunch" translatable="false">Go4Lunch</string>
    <string name="MA_map_view">Map View</string>
    <string name="MA_list_view">List View</string>
    <string name="MA_workmates">Workmates</string>
    <string name="MA_your_lunch">YOUR LUNCH</string>
    <string name="MA_settings">SETTINGS</string>
    <string name="MA_logout">LOGOUT</string>
    <string name="MA_content_description_logo_go4lunch">Logo Go4Lunch</string>
    <string name="MA_content_description_background_nav_drawer_header">Photo of a restaurant table</string>
    <string name="MA_content_description_personal_avatar">Personal avatar</string>
    <string name="MA_no_restaurant_selected">No restaurant selected</string>

    <!-- Used in NavigationDrawer -->
    <string name="MA_navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="MA_navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- Map View Fragment -->
    <string name="MVF_button_center_map">Button to recenter the map</string>
    <string name="MVF_map_view">Map View</string>

    <!-- Menu Search -->
    <string name="MS_menu_search">Search</string>

    <!-- List View Fragment -->
    <string name="LVF_content_description_photo_restaurant">Photo restaurant</string>
    <string name="LVF_content_description_icon_person">Icon person</string>
    <string name="LVF_content_description_icon_star">Icon star</string>
    <string name="LVF_content_description_icon_star_2">Icon star 2</string>
    <string name="LVF_content_description_icon_star_3">Icon star 3</string>
    <string name="LVF_no_restaurants_nearby">No restaurant nearby</string>
    <string name="LVF_count_user" translatable="false">(%d)</string>
    <string name="LVF_open">Open</string>
    <string name="LVF_close">Close</string>
    <string name="LVF_no_information">No information</string>

    <!-- Menu Sort -->
    <string name="MS_action_filter" translatable="false">Action filter</string>
    <string name="MS_sort_by_name">Sort by name</string>
    <string name="MS_sort_by_distance">Sort by distance</string>
    <string name="MS_sort_by_rating">Sort by rating</string>
    <string name="MS_sort_by_workmates">Sort by workmates</string>

    <!-- Workmates View Fragment -->
    <string name="WVF_no_workmate_registered">No workmate registered</string>
    <string name="WVF_is_eating_at">%s is eating at %s</string>
    <string name="WVF_is_eating_at_a_distant_restaurant">%s is eating at a distant restaurant</string>
    <string name="WVF_has_not_decided_yet">%s hasn\'t decided yet</string>
    
    <!-- Details Restaurant Fragment -->
    <string name="DRF_call">Call</string>
    <string name="DRF_like">Like</string>
    <string name="DRF_dislike">Dislike</string>
    <string name="DRF_restaurant_added_to_favorites">Restaurant added to favorites</string>
    <string name="DRF_restaurant_removed_from_favorites">Restaurant removed from favorites</string>
    <string name="DRF_website">Website</string>
    <string name="DRF_no_website_provided">No website provided</string>
    <string name="DRF_content_description_photo_restaurant">Photo restaurant</string>
    <string name="DRF_content_description_star_1">Star 1</string>
    <string name="DRF_content_description_star_2">Star 2</string>
    <string name="DRF_content_description_star_3">Star 3</string>
    <string name="DRF_content_description_check_resto_selected">Check button for restaurant selected</string>
    <string name="DRF_no_phone_number_provided">No phone number provided</string>
    <string name="DRF_is_joining">%s is joining !</string>
    
    <!-- Notification Service -->
    <string name="NS_recap_for_lunch">Recap for lunch</string>
    <string name="NS_info_lunch">\nYou have chosen to eat at %s.\n\nHere is the address of the restaurant : %s.\n\nHere is the list of people going to this restaurant : \n%s</string>

    <!-- Settings Fragment -->
    <string name="SF_settings">Settings</string>
    <string name="SF_notifications">Notifications</string>
    <string name="SF_content_description_logo_settings">Logo settings</string>
</resources>