<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.mainActivity.detailsRestaurantFragment.DetailsRestaurantFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/DRF_photo_restaurant_details"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/DRF_content_description_photo_restaurant"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/DRF_view_details"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/blue_android"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DRF_photo_restaurant_details">

            <TextView
                android:id="@+id/DRF_name_restaurant_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:maxWidth="280dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="J'apprécie les fruits au sirop" />

            <TextView
                android:id="@+id/DRF_adress_restaurant_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:maxWidth="300dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DRF_name_restaurant_details"
                tools:text="Pas changer assiette aux fromages" />

            <ImageView
                android:id="@+id/DRF_icon_star_rating_details_1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/baseline_star_rate_24"
                app:layout_constraintLeft_toRightOf="@id/DRF_name_restaurant_details"
                app:layout_constraintTop_toTopOf="@id/DRF_name_restaurant_details"
                app:layout_constraintBottom_toBottomOf="@id/DRF_name_restaurant_details"
                android:contentDescription="@string/DRF_content_description_star_1" />

            <ImageView
                android:id="@+id/DRF_icon_star_rating_details_2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/baseline_star_rate_24"
                app:layout_constraintLeft_toRightOf="@id/DRF_icon_star_rating_details_1"
                app:layout_constraintTop_toTopOf="@id/DRF_name_restaurant_details"
                app:layout_constraintBottom_toBottomOf="@id/DRF_name_restaurant_details"
                android:contentDescription="@string/DRF_content_description_star_2" />

            <ImageView
                android:id="@+id/DRF_icon_star_rating_details_3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/baseline_star_rate_24"
                app:layout_constraintLeft_toRightOf="@id/DRF_icon_star_rating_details_2"
                app:layout_constraintTop_toTopOf="@id/DRF_name_restaurant_details"
                app:layout_constraintBottom_toBottomOf="@id/DRF_name_restaurant_details"
                android:contentDescription="@string/DRF_content_description_star_3" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageButton
            android:id="@+id/DRF_check_resto_selected"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/button_round_white"
            android:contentDescription="@string/DRF_content_description_check_resto_selected"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_check_circle_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RedundantDescriptionCheck" />

        <Button
            android:id="@+id/DRF_call_resto_details"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/baseline_call_24"
            android:text="@string/DRF_call"
            android:textColor="@color/blue_android"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DRF_view_details" />

        <Button
            android:id="@+id/DRF_like_resto_details"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/baseline_star_like_24"
            android:text="@string/DRF_like"
            android:textColor="@color/blue_android"
            app:layout_constraintLeft_toRightOf="@id/DRF_call_resto_details"
            app:layout_constraintRight_toLeftOf="@id/DRF_website_resto_details"
            app:layout_constraintTop_toBottomOf="@+id/DRF_view_details" />

        <Button
            android:id="@+id/DRF_website_resto_details"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/baseline_public_24"
            android:text="@string/DRF_website"
            android:textColor="@color/blue_android"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DRF_view_details" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/DRF_recyclerview_list_people_resto_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:layout_constraintTop_toBottomOf="@id/DRF_call_resto_details"
            app:layout_constraintLeft_toLeftOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>