<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.mainActivity.settingsFragment.SettingsFragment">

    <ImageView
        android:id="@+id/SF_settings_icon_settings"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_settings_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/SF_content_description_logo_settings" />

    <TextView
        android:id="@+id/SF_settings_title_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SF_settings"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/SF_settings_icon_settings"
        app:layout_constraintRight_toRightOf="@id/SF_settings_icon_settings"
        app:layout_constraintTop_toBottomOf="@id/SF_settings_icon_settings"
        tools:ignore="TextContrastCheck" />

    <Switch
        android:id="@+id/SF_notifications_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:text="@string/SF_notifications"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SF_settings_title_settings"
        tools:ignore="UseSwitchCompatOrMaterialXml,TextContrastCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>